parser.output
Terminals unused in grammar

   VOID
   QUOTE


Rules useless in parser due to conflicts

   25 $@4: /* empty */


State 102 conflicts: 8 reduce/reduce
State 104 conflicts: 1 shift/reduce


Grammar

    0 $accept: program $end

    1 program: function

    2 $@1: /* empty */

    3 function: INT ID LPAREN RPAREN LBRACE $@1 block RBRACE

    4 $@2: /* empty */

    5 block: $@2 statements

    6 statements: statement
    7           | statements statement

    8 statement: INT ID SEMICOLON
    9          | INT ID ASSIGN expr SEMICOLON
   10          | FLOAT ID SEMICOLON
   11          | FLOAT ID ASSIGN expr SEMICOLON
   12          | CHAR ID SEMICOLON
   13          | CHAR LPAREN RPAREN ID SEMICOLON
   14          | CHAR LPAREN RPAREN ID ASSIGN STRING SEMICOLON
   15          | ID ASSIGN expr SEMICOLON
   16          | ID INC SEMICOLON
   17          | ID DEC SEMICOLON
   18          | PRINTF LPAREN expr RPAREN SEMICOLON
   19          | PRINTF LPAREN expr COMMA expr RPAREN SEMICOLON
   20          | PRINTF LPAREN printf_args RPAREN SEMICOLON
   21          | RETURN expr SEMICOLON
   22          | RETURN SEMICOLON

   23 $@3: /* empty */

   24 statement: IF LPAREN expr RPAREN LBRACE $@3 statements RBRACE

   25 $@4: /* empty */

   26 $@5: /* empty */

   27 statement: IF LPAREN expr RPAREN LBRACE $@4 statements RBRACE ELSE LBRACE $@5 statements RBRACE

   28 $@6: /* empty */

   29 statement: WHILE LPAREN expr RPAREN LBRACE $@6 statements RBRACE

   30 expr: expr PLUS expr
   31     | expr MINUS expr
   32     | expr MUL expr
   33     | expr DIV expr
   34     | expr MOD expr
   35     | expr LT expr
   36     | expr GT expr
   37     | expr LE expr
   38     | expr GE expr
   39     | expr EQ expr
   40     | expr NE expr
   41     | expr AND expr
   42     | expr OR expr
   43     | NOT expr
   44     | LPAREN expr RPAREN
   45     | NUMBER
   46     | FLOAT_NUM
   47     | STRING
   48     | CHAR_LIT
   49     | ID
   50     | ID INC
   51     | ID DEC

   52 printf_args: expr COMMA expr
   53            | printf_args COMMA expr


Terminals, with rules where they appear

$end (0) 0
error (256)
INT (258) 3 8 9
FLOAT (259) 10 11
CHAR (260) 12 13 14
RETURN (261) 21 22
IF (262) 24 27
ELSE (263) 27
WHILE (264) 29
PRINTF (265) 18 19 20
VOID (266)
NUMBER (267) 45
FLOAT_NUM (268) 46
ID (269) 3 8 9 10 11 12 13 14 15 16 17 49 50 51
STRING (270) 14 47
CHAR_LIT (271) 48
PLUS (272) 30
MINUS (273) 31
MUL (274) 32
DIV (275) 33
MOD (276) 34
ASSIGN (277) 9 11 14 15
SEMICOLON (278) 8 9 10 11 12 13 14 15 16 17 18 19 20 21 22
COMMA (279) 19 52 53
QUOTE (280)
LPAREN (281) 3 13 14 18 19 20 24 27 29 44
RPAREN (282) 3 13 14 18 19 20 24 27 29 44
LBRACE (283) 3 24 27 29
RBRACE (284) 3 24 27 29
LT (285) 35
GT (286) 36
LE (287) 37
GE (288) 38
EQ (289) 39
NE (290) 40
NOT (291) 43
AND (292) 41
OR (293) 42
INC (294) 16 50
DEC (295) 17 51


Nonterminals, with rules where they appear

$accept (41)
    on left: 0
program (42)
    on left: 1, on right: 0
function (43)
    on left: 3, on right: 1
$@1 (44)
    on left: 2, on right: 3
block (45)
    on left: 5, on right: 3
$@2 (46)
    on left: 4, on right: 5
statements (47)
    on left: 6 7, on right: 5 7 24 27 29
statement (48)
    on left: 8 9 10 11 12 13 14 15 16 17 18 19 20 21 22 24 27 29, on right:
    6 7
$@3 (49)
    on left: 23, on right: 24
$@4 (50)
    on left: 25, on right: 27
$@5 (51)
    on left: 26, on right: 27
$@6 (52)
    on left: 28, on right: 29
expr (53)
    on left: 30 31 32 33 34 35 36 37 38 39 40 41 42 43 44 45 46 47
    48 49 50 51, on right: 9 11 15 18 19 21 24 27 29 30 31 32 33 34
    35 36 37 38 39 40 41 42 43 44 52 53
printf_args (54)
    on left: 52 53, on right: 20 53


state 0

    0 $accept: . program $end

    INT  shift, and go to state 1

    program   go to state 2
    function  go to state 3


state 1

    3 function: INT . ID LPAREN RPAREN LBRACE $@1 block RBRACE

    ID  shift, and go to state 4


state 2

    0 $accept: program . $end

    $end  shift, and go to state 5


state 3

    1 program: function .

    $default  reduce using rule 1 (program)


state 4

    3 function: INT ID . LPAREN RPAREN LBRACE $@1 block RBRACE

    LPAREN  shift, and go to state 6


state 5

    0 $accept: program $end .

    $default  accept


state 6

    3 function: INT ID LPAREN . RPAREN LBRACE $@1 block RBRACE

    RPAREN  shift, and go to state 7


state 7

    3 function: INT ID LPAREN RPAREN . LBRACE $@1 block RBRACE

    LBRACE  shift, and go to state 8


state 8

    3 function: INT ID LPAREN RPAREN LBRACE . $@1 block RBRACE

    $default  reduce using rule 2 ($@1)

    $@1  go to state 9


state 9

    3 function: INT ID LPAREN RPAREN LBRACE $@1 . block RBRACE

    $default  reduce using rule 4 ($@2)

    block  go to state 10
    $@2    go to state 11


state 10

    3 function: INT ID LPAREN RPAREN LBRACE $@1 block . RBRACE

    RBRACE  shift, and go to state 12


state 11

    5 block: $@2 . statements

    INT     shift, and go to state 13
    FLOAT   shift, and go to state 14
    CHAR    shift, and go to state 15
    RETURN  shift, and go to state 16
    IF      shift, and go to state 17
    WHILE   shift, and go to state 18
    PRINTF  shift, and go to state 19
    ID      shift, and go to state 20

    statements  go to state 21
    statement   go to state 22


state 12

    3 function: INT ID LPAREN RPAREN LBRACE $@1 block RBRACE .

    $default  reduce using rule 3 (function)


state 13

    8 statement: INT . ID SEMICOLON
    9          | INT . ID ASSIGN expr SEMICOLON

    ID  shift, and go to state 23


state 14

   10 statement: FLOAT . ID SEMICOLON
   11          | FLOAT . ID ASSIGN expr SEMICOLON

    ID  shift, and go to state 24


state 15

   12 statement: CHAR . ID SEMICOLON
   13          | CHAR . LPAREN RPAREN ID SEMICOLON
   14          | CHAR . LPAREN RPAREN ID ASSIGN STRING SEMICOLON

    ID      shift, and go to state 25
    LPAREN  shift, and go to state 26


state 16

   21 statement: RETURN . expr SEMICOLON
   22          | RETURN . SEMICOLON

    NUMBER     shift, and go to state 27
    FLOAT_NUM  shift, and go to state 28
    ID         shift, and go to state 29
    STRING     shift, and go to state 30
    CHAR_LIT   shift, and go to state 31
    SEMICOLON  shift, and go to state 32
    LPAREN     shift, and go to state 33
    NOT        shift, and go to state 34

    expr  go to state 35


state 17

   24 statement: IF . LPAREN expr RPAREN LBRACE $@3 statements RBRACE
   27          | IF . LPAREN expr RPAREN LBRACE $@4 statements RBRACE ELSE LBRACE $@5 statements RBRACE

    LPAREN  shift, and go to state 36


state 18

   29 statement: WHILE . LPAREN expr RPAREN LBRACE $@6 statements RBRACE

    LPAREN  shift, and go to state 37


state 19

   18 statement: PRINTF . LPAREN expr RPAREN SEMICOLON
   19          | PRINTF . LPAREN expr COMMA expr RPAREN SEMICOLON
   20          | PRINTF . LPAREN printf_args RPAREN SEMICOLON

    LPAREN  shift, and go to state 38


state 20

   15 statement: ID . ASSIGN expr SEMICOLON
   16          | ID . INC SEMICOLON
   17          | ID . DEC SEMICOLON

    ASSIGN  shift, and go to state 39
    INC     shift, and go to state 40
    DEC     shift, and go to state 41


state 21

    5 block: $@2 statements .
    7 statements: statements . statement

    INT     shift, and go to state 13
    FLOAT   shift, and go to state 14
    CHAR    shift, and go to state 15
    RETURN  shift, and go to state 16
    IF      shift, and go to state 17
    WHILE   shift, and go to state 18
    PRINTF  shift, and go to state 19
    ID      shift, and go to state 20

    $default  reduce using rule 5 (block)

    statement  go to state 42


state 22

    6 statements: statement .

    $default  reduce using rule 6 (statements)


state 23

    8 statement: INT ID . SEMICOLON
    9          | INT ID . ASSIGN expr SEMICOLON

    ASSIGN     shift, and go to state 43
    SEMICOLON  shift, and go to state 44


state 24

   10 statement: FLOAT ID . SEMICOLON
   11          | FLOAT ID . ASSIGN expr SEMICOLON

    ASSIGN     shift, and go to state 45
    SEMICOLON  shift, and go to state 46


state 25

   12 statement: CHAR ID . SEMICOLON

    SEMICOLON  shift, and go to state 47


state 26

   13 statement: CHAR LPAREN . RPAREN ID SEMICOLON
   14          | CHAR LPAREN . RPAREN ID ASSIGN STRING SEMICOLON

    RPAREN  shift, and go to state 48


state 27

   45 expr: NUMBER .

    $default  reduce using rule 45 (expr)


state 28

   46 expr: FLOAT_NUM .

    $default  reduce using rule 46 (expr)


state 29

   49 expr: ID .
   50     | ID . INC
   51     | ID . DEC

    INC  shift, and go to state 49
    DEC  shift, and go to state 50

    $default  reduce using rule 49 (expr)


state 30

   47 expr: STRING .

    $default  reduce using rule 47 (expr)


state 31

   48 expr: CHAR_LIT .

    $default  reduce using rule 48 (expr)


state 32

   22 statement: RETURN SEMICOLON .

    $default  reduce using rule 22 (statement)


state 33

   44 expr: LPAREN . expr RPAREN

    NUMBER     shift, and go to state 27
    FLOAT_NUM  shift, and go to state 28
    ID         shift, and go to state 29
    STRING     shift, and go to state 30
    CHAR_LIT   shift, and go to state 31
    LPAREN     shift, and go to state 33
    NOT        shift, and go to state 34

    expr  go to state 51


state 34

   43 expr: NOT . expr

    NUMBER     shift, and go to state 27
    FLOAT_NUM  shift, and go to state 28
    ID         shift, and go to state 29
    STRING     shift, and go to state 30
    CHAR_LIT   shift, and go to state 31
    LPAREN     shift, and go to state 33
    NOT        shift, and go to state 34

    expr  go to state 52


state 35

   21 statement: RETURN expr . SEMICOLON
   30 expr: expr . PLUS expr
   31     | expr . MINUS expr
   32     | expr . MUL expr
   33     | expr . DIV expr
   34     | expr . MOD expr
   35     | expr . LT expr
   36     | expr . GT expr
   37     | expr . LE expr
   38     | expr . GE expr
   39     | expr . EQ expr
   40     | expr . NE expr
   41     | expr . AND expr
   42     | expr . OR expr

    PLUS       shift, and go to state 53
    MINUS      shift, and go to state 54
    MUL        shift, and go to state 55
    DIV        shift, and go to state 56
    MOD        shift, and go to state 57
    SEMICOLON  shift, and go to state 58
    LT         shift, and go to state 59
    GT         shift, and go to state 60
    LE         shift, and go to state 61
    GE         shift, and go to state 62
    EQ         shift, and go to state 63
    NE         shift, and go to state 64
    AND        shift, and go to state 65
    OR         shift, and go to state 66


state 36

   24 statement: IF LPAREN . expr RPAREN LBRACE $@3 statements RBRACE
   27          | IF LPAREN . expr RPAREN LBRACE $@4 statements RBRACE ELSE LBRACE $@5 statements RBRACE

    NUMBER     shift, and go to state 27
    FLOAT_NUM  shift, and go to state 28
    ID         shift, and go to state 29
    STRING     shift, and go to state 30
    CHAR_LIT   shift, and go to state 31
    LPAREN     shift, and go to state 33
    NOT        shift, and go to state 34

    expr  go to state 67


state 37

   29 statement: WHILE LPAREN . expr RPAREN LBRACE $@6 statements RBRACE

    NUMBER     shift, and go to state 27
    FLOAT_NUM  shift, and go to state 28
    ID         shift, and go to state 29
    STRING     shift, and go to state 30
    CHAR_LIT   shift, and go to state 31
    LPAREN     shift, and go to state 33
    NOT        shift, and go to state 34

    expr  go to state 68


state 38

   18 statement: PRINTF LPAREN . expr RPAREN SEMICOLON
   19          | PRINTF LPAREN . expr COMMA expr RPAREN SEMICOLON
   20          | PRINTF LPAREN . printf_args RPAREN SEMICOLON

    NUMBER     shift, and go to state 27
    FLOAT_NUM  shift, and go to state 28
    ID         shift, and go to state 29
    STRING     shift, and go to state 30
    CHAR_LIT   shift, and go to state 31
    LPAREN     shift, and go to state 33
    NOT        shift, and go to state 34

    expr         go to state 69
    printf_args  go to state 70


state 39

   15 statement: ID ASSIGN . expr SEMICOLON

    NUMBER     shift, and go to state 27
    FLOAT_NUM  shift, and go to state 28
    ID         shift, and go to state 29
    STRING     shift, and go to state 30
    CHAR_LIT   shift, and go to state 31
    LPAREN     shift, and go to state 33
    NOT        shift, and go to state 34

    expr  go to state 71


state 40

   16 statement: ID INC . SEMICOLON

    SEMICOLON  shift, and go to state 72


state 41

   17 statement: ID DEC . SEMICOLON

    SEMICOLON  shift, and go to state 73


state 42

    7 statements: statements statement .

    $default  reduce using rule 7 (statements)


state 43

    9 statement: INT ID ASSIGN . expr SEMICOLON

    NUMBER     shift, and go to state 27
    FLOAT_NUM  shift, and go to state 28
    ID         shift, and go to state 29
    STRING     shift, and go to state 30
    CHAR_LIT   shift, and go to state 31
    LPAREN     shift, and go to state 33
    NOT        shift, and go to state 34

    expr  go to state 74


state 44

    8 statement: INT ID SEMICOLON .

    $default  reduce using rule 8 (statement)


state 45

   11 statement: FLOAT ID ASSIGN . expr SEMICOLON

    NUMBER     shift, and go to state 27
    FLOAT_NUM  shift, and go to state 28
    ID         shift, and go to state 29
    STRING     shift, and go to state 30
    CHAR_LIT   shift, and go to state 31
    LPAREN     shift, and go to state 33
    NOT        shift, and go to state 34

    expr  go to state 75


state 46

   10 statement: FLOAT ID SEMICOLON .

    $default  reduce using rule 10 (statement)


state 47

   12 statement: CHAR ID SEMICOLON .

    $default  reduce using rule 12 (statement)


state 48

   13 statement: CHAR LPAREN RPAREN . ID SEMICOLON
   14          | CHAR LPAREN RPAREN . ID ASSIGN STRING SEMICOLON

    ID  shift, and go to state 76


state 49

   50 expr: ID INC .

    $default  reduce using rule 50 (expr)


state 50

   51 expr: ID DEC .

    $default  reduce using rule 51 (expr)


state 51

   30 expr: expr . PLUS expr
   31     | expr . MINUS expr
   32     | expr . MUL expr
   33     | expr . DIV expr
   34     | expr . MOD expr
   35     | expr . LT expr
   36     | expr . GT expr
   37     | expr . LE expr
   38     | expr . GE expr
   39     | expr . EQ expr
   40     | expr . NE expr
   41     | expr . AND expr
   42     | expr . OR expr
   44     | LPAREN expr . RPAREN

    PLUS    shift, and go to state 53
    MINUS   shift, and go to state 54
    MUL     shift, and go to state 55
    DIV     shift, and go to state 56
    MOD     shift, and go to state 57
    RPAREN  shift, and go to state 77
    LT      shift, and go to state 59
    GT      shift, and go to state 60
    LE      shift, and go to state 61
    GE      shift, and go to state 62
    EQ      shift, and go to state 63
    NE      shift, and go to state 64
    AND     shift, and go to state 65
    OR      shift, and go to state 66


state 52

   30 expr: expr . PLUS expr
   31     | expr . MINUS expr
   32     | expr . MUL expr
   33     | expr . DIV expr
   34     | expr . MOD expr
   35     | expr . LT expr
   36     | expr . GT expr
   37     | expr . LE expr
   38     | expr . GE expr
   39     | expr . EQ expr
   40     | expr . NE expr
   41     | expr . AND expr
   42     | expr . OR expr
   43     | NOT expr .

    $default  reduce using rule 43 (expr)


state 53

   30 expr: expr PLUS . expr

    NUMBER     shift, and go to state 27
    FLOAT_NUM  shift, and go to state 28
    ID         shift, and go to state 29
    STRING     shift, and go to state 30
    CHAR_LIT   shift, and go to state 31
    LPAREN     shift, and go to state 33
    NOT        shift, and go to state 34

    expr  go to state 78


state 54

   31 expr: expr MINUS . expr

    NUMBER     shift, and go to state 27
    FLOAT_NUM  shift, and go to state 28
    ID         shift, and go to state 29
    STRING     shift, and go to state 30
    CHAR_LIT   shift, and go to state 31
    LPAREN     shift, and go to state 33
    NOT        shift, and go to state 34

    expr  go to state 79


state 55

   32 expr: expr MUL . expr

    NUMBER     shift, and go to state 27
    FLOAT_NUM  shift, and go to state 28
    ID         shift, and go to state 29
    STRING     shift, and go to state 30
    CHAR_LIT   shift, and go to state 31
    LPAREN     shift, and go to state 33
    NOT        shift, and go to state 34

    expr  go to state 80


state 56

   33 expr: expr DIV . expr

    NUMBER     shift, and go to state 27
    FLOAT_NUM  shift, and go to state 28
    ID         shift, and go to state 29
    STRING     shift, and go to state 30
    CHAR_LIT   shift, and go to state 31
    LPAREN     shift, and go to state 33
    NOT        shift, and go to state 34

    expr  go to state 81


state 57

   34 expr: expr MOD . expr

    NUMBER     shift, and go to state 27
    FLOAT_NUM  shift, and go to state 28
    ID         shift, and go to state 29
    STRING     shift, and go to state 30
    CHAR_LIT   shift, and go to state 31
    LPAREN     shift, and go to state 33
    NOT        shift, and go to state 34

    expr  go to state 82


state 58

   21 statement: RETURN expr SEMICOLON .

    $default  reduce using rule 21 (statement)


state 59

   35 expr: expr LT . expr

    NUMBER     shift, and go to state 27
    FLOAT_NUM  shift, and go to state 28
    ID         shift, and go to state 29
    STRING     shift, and go to state 30
    CHAR_LIT   shift, and go to state 31
    LPAREN     shift, and go to state 33
    NOT        shift, and go to state 34

    expr  go to state 83


state 60

   36 expr: expr GT . expr
